# trail_features.py
@@ -1,46 +1,48 @@
-from flask import abort, make_response, request
+from flask import request, jsonify
+from models import db, Trail_Feature
+from sqlalchemy.exc import IntegrityError, SQLAlchemyError
+import random
 
-from config import db
-from models import TrailFeatures, trail_feature_schema, trail_features_schema
+def get_trail_features():
+    trail_id = request.args.get("trail_id")
+    q = Trail_Feature.query
+    if trail_id:
+        q = q.filter_by(trail_id=trail_id)
+    items = q.all()
 
-def read_all():
-    links = TrailFeatures.query.all()
-    return trail_features_schema.dump(links)
+    result = [
+        {
+            "trail_feature_id": t.trail_feature_id,
+            "trail_id": t.trail_id,
+            "feature_id": t.feature_id
+        }
+        for t in items
+    ]
+    return jsonify(result), 200
 
+def create_trail_feature(body):
+    trail_id = body.get("trail_id")
+    feature_id = body.get("feature_id")
 
-def read_one(trail_feature_id):
-    link = TrailFeatures.query.get(trail_feature_id)
-    if link is None:
-        abort(404)
-    return trail_feature_schema.dump(link)
+    if not trail_id or not feature_id:
+        return jsonify({"error": "trail_id and feature_id required"}), 400
 
+    new_id = f"TF{random.randint(100000,999999)}"
+    tf = Trail_Feature(trail_feature_id=new_id, trail_id=trail_id, feature_id=feature_id)
 
-def create():
-    data = request.json
-    new_link = TrailFeatures(**data)
-    db.session.add(new_link)
+    try:
+        db.session.add(tf)
+        db.session.commit()
+        return jsonify({"trail_feature_id": new_id, "trail_id": trail_id, "feature_id": feature_id}), 201
+    except IntegrityError as e:
+        db.session.rollback()
+        return jsonify({"error": "Integrity error", "details": str(e.orig)}), 400
+
+def delete_trail_feature(trail_feature_id):
+    tf = Trail_Feature.query.get(trail_feature_id)
+    if not tf:
+        return jsonify({"error": "Not found"}), 404
+
+    db.session.delete(tf)
     db.session.commit()
-    return {"message": "Trail-Feature link created"}, 201
-
-
-def update(trail_feature_id):
-    link = TrailFeatures.query.get(trail_feature_id)
-    if link is None:
-        abort(404)
-
-    data = request.json
-    for key, value in data.items():
-        setattr(link, key, value)
-
-    db.session.commit()
-    return {"message": "Trail-Feature link updated"}
-
-
-def delete(trail_feature_id):
-    link = TrailFeatures.query.get(trail_feature_id)
-    if link is None:
-        abort(404)
-
-    db.session.delete(link)
-    db.session.commit()
-    return "", 204
+    return '', 204
